Fix map height on Iphones

--- a/style.css
+++ b/style.css
@@ -876,16 +876,18 @@ ul {
 }
 
 .location-map {
-  flex: 1;
-  height: 450px;
-  border-radius: 12px;
-  overflow: hidden;
+    display: grid;
+    width: 100%;
+    aspect-ratio: 16 / 9;
+    border-radius: 12px;
+    overflow: hidden;
 }
 
 .location-map iframe {
-  width: 100%;
-  height: 100%;
-  display: block;
+    width: 100% !important;
+    height: 100% !important;
+    border: 0;
+    display: block;
 }
 
 .location p {
@@ -1321,12 +1323,6 @@ ul {
   .location-map {
     flex: 1;
     width: 100%;
-  }
-
-  .location-map {
-    width: 100%;
-    height: 400px !important;
-    min-height: 400px !important;
   }
 
   .location-map iframe {
